force-app/main/default/objects/Lead/fields/Budget_Range__c.field-meta.xml
<CustomField>
    <fullName>Budget_Range__c</fullName>
    <label>Budget Range</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under $50K</fullName>
            </value>
            <value>
                <fullName>$50K – $250K</fullName>
            </value>
            <value>
                <fullName>$250K – $1M</fullName>
            </value>
            <value>
                <fullName>$1M+</fullName>
            </value>
            <value>
                <fullName>Unknown / Not Disclosed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>