force-app/main/default/objects/Lead/fields/Clinical_Need__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Need__c</fullName>
    <label>Clinical Need</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>