force-app/main/default/objects/Lead/fields/Device_Category__c.field-meta.xml
<CustomField>
    <fullName>Device_Category__c</fullName>
    <label>Device Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient Monitoring Systems</fullName>
            </value>
            <value>
                <fullName>Imaging Equipment</fullName>
            </value>
            <value>
                <fullName>Surgical Devices</fullName>
            </value>
            <value>
                <fullName>Infusion Systems</fullName>
            </value>
            <value>
                <fullName>Diagnostic Equipment</fullName>
            </value>
            <value>
                <fullName>Consumables / Disposables</fullName>
            </value>
            <value>
                <fullName>Service / Maintenance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>