force-app/main/default/objects/Lead/fields/Hospital_Address__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Address__c</fullName>
    <formula>Hospital_Network__r.Address__c &amp; BR() &amp; 
Hospital_Network__r.City__c &amp; &quot;, &quot; &amp; 
TEXT(Hospital_Network__r.State__c) &amp; BR() &amp; 
TEXT(Hospital_Network__r.Country__c)</formula>
    <label>Hospital Address</label>
    <type>Text</type>
</CustomField>