force-app/main/default/objects/Lead/fields/Hospital_Name__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Name__c</fullName>
    <formula>Hospital_Network__r.Name</formula>
    <label>Hospital Name</label>
    <type>Text</type>
</CustomField>