force-app/main/default/objects/Lead/fields/Hospital_Network__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Network__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital Network</label>
    <referenceTo>Hospital_Network__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>