force-app/main/default/objects/Lead/fields/Marketing_Event__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Event__c</fullName>
    <label>Marketing Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>