force-app/main/default/objects/Lead/fields/NPI_Number__c.field-meta.xml
<CustomField>
    <fullName>NPI_Number__c</fullName>
    <label>NPI Number</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>