force-app/main/default/objects/Lead/fields/Trial_Requested__c.field-meta.xml
<CustomField>
    <fullName>Trial_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trial Requested</label>
    <type>Checkbox</type>
</CustomField>