force-app/main/default/objects/Lead/recordTypes/Medical_Device_Lead.recordType-meta.xml
<RecordType>
    <fullName>Medical_Device_Lead</fullName>
    <active>true</active>
    <businessProcess>Medical Device Lead Process</businessProcess>
    <label>Medical Device Lead</label>
</RecordType>